fixed placeholders not showing up

--- a/app/assets/stylesheets/components/_user_profile.scss
+++ b/app/assets/stylesheets/components/_user_profile.scss
@@ -3,3 +3,8 @@
   color: #B2B2B2;
   font-size: 18px;
 }
+
+.after-placeholders {
+  font-size: 16px;
+  color: white;
+}
